@@ -233,6 +233,7 @@ missing-statement:			warning
 zero-length-literals:			unconformable # not verified yet
 xml-generate-extra-phrases:		unconformable
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		ACU
