@@ -238,6 +238,7 @@ missing-statement:			warning
 zero-length-literals:			ok
 xml-generate-extra-phrases:		ok
 continue-after:				ok
+goto-entry:				warning
 
 # use complete word list; synonyms and exceptions are specified below
 reserved-words:		default
