@@ -232,6 +232,7 @@ missing-statement:			error		# according to documentation
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		ok
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MF
