@@ -236,6 +236,7 @@ missing-statement:			warning		# not verified yet
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		unconformable
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
